# Chatty

./: .dockerignore  .gitignore  Cargo.toml  Migration.md  README.md  TODO.md  USEFUL_LINKS.md  docker-compose.yml  envoy.yaml  protoc.sh
GUIDES/: Migration.md  TODO.md  USEFUL_LINKS.md
client/: .gitignore  Dockerfile  package-lock.json  package.json  rollup.config.js  tsconfig.json
client/src/: App.svelte  App.tsx  main.ts
client/src/components/: Children.svelte
client/src/grpc-service/: chat_pb.d.ts  chat_pb.js  chat_pb_service.d.ts  chat_pb_service.js
client/src/pages/: index.svelte
common/: Cargo.toml  build.rs
common/proto/: chat.proto
common/src/: lib.rs
envoy/: Dockerfile  config.yaml
migrations/: 20210204175248_gen_db.sql  run.sh
proto/: chat.proto
server/: Cargo.toml  Dockerfile
server/src/: db.rs  main.rs
server/src/models/: mod.rs
server/src/services/: chat.rs
server/src/utils/: env.rs  mod.rs  overrites.rs
src/: db.rs  server.rs
