[package]
authors = ["Majedul Hoque <rumanbsl@gmail.com>"]
edition = "2018"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-types = "0.7.0"
tonic = "0.4.0"
[build-dependencies]
tonic-build = "0.4.0"
