[package]
authors = ["Majedul Hoque <rumanbsl@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
common = {path = "../common/"}
prost-types = "0.7.0"
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5.1", features = ["postgres", "runtime-tokio-rustls"]}
tokio = {version = "1.2.0", features = ["full"]}
tokio-stream = "0.1.3"
tonic = "0.4.0"
