[package]
authors = ["Majedul Hoque <rumanbsl@gmail.com>"]
edition = "2018"
name    = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow       = "1.0"
async-stream = "0.3.0"
prost-types  = "0.7.0"
rand         = "0.8.3"
serde_json   = "1.0"
thiserror    = "1.0"
tokio-stream = "0.1.3"
tonic        = "0.4.0"
  [dependencies.common]
  path = "../common/"
  [dependencies.sqlx]
  features = ["postgres", "runtime-tokio-rustls", "chrono"]
  version  = "0.5.1"
  [dependencies.serde]
  features = ["derive"]
  version  = "1.0"
  [dependencies.tokio]
  features = ["full"]
  version  = "1.2.0"
